--- a/cart/src/components/front/Products/Products.css
+++ b/cart/src/components/front/Products/Products.css
@@ -54,6 +54,20 @@
     cursor: pointer;
 }
 
+#product-button-added {
+    font-weight: 700;
+    font-size: 18px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    background-color: rgb(1, 80, 1);
+    color: white;
+    width: 100%;
+    height: 25px;
+    display: block;
+    cursor: pointer;
+}
+
 #product-button:hover {
     background-color: rebeccapurple;
 }
