--- a/cart/src/components/front/Header/Header.css
+++ b/cart/src/components/front/Header/Header.css
@@ -2,20 +2,21 @@
     position: sticky;
     top: 0;
     min-height: 80px;
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
     overflow: hidden;
     background-color: #2C3E50;
+    z-index: 1;
 }
 
 .logo {
     text-decoration: none;
     text-transform: uppercase;
     color: #EB9532;
-    padding-left: 40px;
+    padding-left: 16px;
 }
 
 .header-links {
@@ -32,7 +33,7 @@
     text-decoration: none;
     text-transform: uppercase;
     color: #EB9532;
-    padding: 0px 15px;
+    padding: 0px 8px;
 }
 
 .header-links ul li a:hover{
