Added more styles.

--- a/cart/src/components/front/Cart/Cart.css
+++ b/cart/src/components/front/Cart/Cart.css
@@ -5,10 +5,12 @@
 }
 
 .cart-items-header { 
-    margin-bottom: 32px;
+    margin: 32px;
 }
 
 .cart-items-image {
+    padding-top: 16px;
+    justify-content: center;
     width: 120px;
     height: 120px;
 }
@@ -16,4 +18,11 @@
 .cart-items-list {
     flex-direction: column;
     margin-bottom: 32px;
+    border: 1px solid black;
+    width: 300px;
+}
+
+#cart-remove-button:hover {
+    background-color: red;
+    color: whitesmoke
 }
